gccida/c0/read_integral_parameter
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/read_integral_parameter/src/toplev.c:2015:28: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
for ( endp = p; *endp && ( sch_istable[*( unsigned __int8 *)endp] & 4) != 0; ++endp ) 
                           ^~~~~~~~~~~
                           _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/read_integral_parameter/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/read_integral_parameter/src/obj/toplev.o] Error 1
